--- a/Hospital/src/main/resources/application.properties
+++ b/Hospital/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=8085
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_hospital_project
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
